# Phantomx-Navigation

./: .gitignore  .ycm_extra_conf.py
src/actionlib_tutorials/: CMakeLists.txt  package.xml
src/phantomx_control/: CMakeLists.txt  package.xml
src/phantomx_control/action/: Phantomx.action
src/phantomx_control/config/: dynamixel_params.yaml  phantomx_control_config.yaml
src/phantomx_control/include/phantomx_control/: phantomx_control.h
src/phantomx_control/launch/: dynamixel.launch  phantomx_control.launch  rviz.launch  test.launch
src/phantomx_control/msg/: Command.msg
src/phantomx_control/scripts/: action_client.py  dynamixel_joint_state_publisher.py  relax_all_servos.py
src/phantomx_control/src/: manual_joy_control.cpp  phantomx_control.cpp  phantomx_control_node.cpp
src/phantomx_description/: CMakeLists.txt  package.xml
src/phantomx_description/launch/: phantomx_rviz.launch
src/phantomx_description/meshes/: base_link_simple.stl  coxa_link.STL  coxa_link_simple.STL  femur_link.STL  femur_link_simple.STL  tibia_link.STL  tibia_link_simple.STL
src/phantomx_description/rviz/: default.rviz
src/phantomx_description/urdf/: kinect.urdf.xacro  macros.xacro  materials.xacro  phantomx.gazebo  phantomx.sdf  phantomx.urdf  phantomx.xacro
src/phantomx_description/urdf_mk3/: phantomx.sdf  phantomx.urdf  phantomx.xacro  (+1 more)
src/phantomx_gazebo/: CMakeLists.txt  package.xml
src/phantomx_moveit/: CMakeLists.txt  package.xml
src/phantomx_moveit_config/: .setup_assistant  package.xml
src/phantomx_state_estimator/: CMakeLists.txt  package.xml
(+30 files in other folders)
